# georesolve

./: .gitignore  HANDOFF.md  Makefile  README.md  pyproject.toml
georesolve/: models.py  parsing.py
georesolve/interfaces/: api.py  cli.py
georesolve/providers/: __init__.py  base.py  census.py  factory.py
georesolve/services/: __init__.py  resolver.py
tests/: test_api.py  test_census_provider.py  test_cli.py  test_live_census_smoke.py  test_parsing.py  test_resolver.py
